Fixed css for surface duo | White space below 50px

--- a/frontend/src/StyleSheets/Home.css
+++ b/frontend/src/StyleSheets/Home.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poetsen+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 .main {
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 /* Cover */
@@ -265,7 +265,7 @@
   gap: 5px;
 }
 
-@media only screen and (max-width: 515px) {
+@media only screen and (max-width: 575px) {
   .feature-icon {
     padding-inline: 10px;
   }
